src/qt/cbor/libqcbormap.bf

extension CQt
{
	[LinkName("QCborMap_new")]
	public static extern void* QCborMap_new();
	[LinkName("QCborMap_new2")]
	public static extern void* QCborMap_new2(void* other);
	[LinkName("QCborMap_OperatorAssign")]
	public static extern void QCborMap_OperatorAssign(void* c_this, void* other);
	[LinkName("QCborMap_Swap")]
	public static extern void QCborMap_Swap(void* c_this, void* other);
	[LinkName("QCborMap_ToCborValue")]
	public static extern void QCborMap_ToCborValue(void* c_this);
	[LinkName("QCborMap_Size")]
	public static extern int32 QCborMap_Size(void* c_this);
	[LinkName("QCborMap_IsEmpty")]
	public static extern bool QCborMap_IsEmpty(void* c_this);
	[LinkName("QCborMap_Clear")]
	public static extern void QCborMap_Clear(void* c_this);
	[LinkName("QCborMap_Keys")]
	public static extern void[] QCborMap_Keys(void* c_this);
	[LinkName("QCborMap_Value")]
	public static extern void QCborMap_Value(void* c_this, int64 key);
	[LinkName("QCborMap_Value2")]
	public static extern void QCborMap_Value2(void* c_this, libqt_string key);
	[LinkName("QCborMap_Value3")]
	public static extern void QCborMap_Value3(void* c_this, void* key);
	[LinkName("QCborMap_OperatorSubscript")]
	public static extern void QCborMap_OperatorSubscript(void* c_this, int64 key);
	[LinkName("QCborMap_OperatorSubscript2")]
	public static extern void QCborMap_OperatorSubscript2(void* c_this, libqt_string key);
	[LinkName("QCborMap_OperatorSubscript3")]
	public static extern void QCborMap_OperatorSubscript3(void* c_this, void* key);
	[LinkName("QCborMap_OperatorSubscript4")]
	public static extern void QCborMap_OperatorSubscript4(void* c_this, int64 key);
	[LinkName("QCborMap_OperatorSubscript6")]
	public static extern void QCborMap_OperatorSubscript6(void* c_this, libqt_string key);
	[LinkName("QCborMap_OperatorSubscript7")]
	public static extern void QCborMap_OperatorSubscript7(void* c_this, void* key);
	[LinkName("QCborMap_Take")]
	public static extern void QCborMap_Take(void* c_this, int64 key);
	[LinkName("QCborMap_Take2")]
	public static extern void QCborMap_Take2(void* c_this, libqt_string key);
	[LinkName("QCborMap_Take3")]
	public static extern void QCborMap_Take3(void* c_this, void* key);
	[LinkName("QCborMap_Remove")]
	public static extern void QCborMap_Remove(void* c_this, int64 key);
	[LinkName("QCborMap_Remove2")]
	public static extern void QCborMap_Remove2(void* c_this, libqt_string key);
	[LinkName("QCborMap_Remove3")]
	public static extern void QCborMap_Remove3(void* c_this, void* key);
	[LinkName("QCborMap_Contains")]
	public static extern bool QCborMap_Contains(void* c_this, int64 key);
	[LinkName("QCborMap_Contains2")]
	public static extern bool QCborMap_Contains2(void* c_this, libqt_string key);
	[LinkName("QCborMap_Contains3")]
	public static extern bool QCborMap_Contains3(void* c_this, void* key);
	[LinkName("QCborMap_Compare")]
	public static extern int32 QCborMap_Compare(void* c_this, void* other);
	[LinkName("QCborMap_OperatorEqual")]
	public static extern bool QCborMap_OperatorEqual(void* c_this, void* other);
	[LinkName("QCborMap_OperatorNotEqual")]
	public static extern bool QCborMap_OperatorNotEqual(void* c_this, void* other);
	[LinkName("QCborMap_OperatorLesser")]
	public static extern bool QCborMap_OperatorLesser(void* c_this, void* other);
	[LinkName("QCborMap_Begin")]
	public static extern QCborMap__Iterator QCborMap_Begin(void* c_this);
	[LinkName("QCborMap_ConstBegin")]
	public static extern QCborMap__ConstIterator QCborMap_ConstBegin(void* c_this);
	[LinkName("QCborMap_Begin2")]
	public static extern QCborMap__ConstIterator QCborMap_Begin2(void* c_this);
	[LinkName("QCborMap_Cbegin")]
	public static extern QCborMap__ConstIterator QCborMap_Cbegin(void* c_this);
	[LinkName("QCborMap_End")]
	public static extern QCborMap__Iterator QCborMap_End(void* c_this);
	[LinkName("QCborMap_ConstEnd")]
	public static extern QCborMap__ConstIterator QCborMap_ConstEnd(void* c_this);
	[LinkName("QCborMap_End2")]
	public static extern QCborMap__ConstIterator QCborMap_End2(void* c_this);
	[LinkName("QCborMap_Cend")]
	public static extern QCborMap__ConstIterator QCborMap_Cend(void* c_this);
	[LinkName("QCborMap_Erase")]
	public static extern QCborMap__Iterator QCborMap_Erase(void* c_this, QCborMap__Iterator it);
	[LinkName("QCborMap_EraseWithIt")]
	public static extern QCborMap__Iterator QCborMap_EraseWithIt(void* c_this, QCborMap__ConstIterator it);
	[LinkName("QCborMap_Extract")]
	public static extern void QCborMap_Extract(void* c_this, QCborMap__Iterator it);
	[LinkName("QCborMap_ExtractWithIt")]
	public static extern void QCborMap_ExtractWithIt(void* c_this, QCborMap__ConstIterator it);
	[LinkName("QCborMap_Empty")]
	public static extern bool QCborMap_Empty(void* c_this);
	[LinkName("QCborMap_Find")]
	public static extern QCborMap__Iterator QCborMap_Find(void* c_this, int64 key);
	[LinkName("QCborMap_Find2")]
	public static extern QCborMap__Iterator QCborMap_Find2(void* c_this, libqt_string key);
	[LinkName("QCborMap_Find3")]
	public static extern QCborMap__Iterator QCborMap_Find3(void* c_this, void* key);
	[LinkName("QCborMap_ConstFind")]
	public static extern QCborMap__ConstIterator QCborMap_ConstFind(void* c_this, int64 key);
	[LinkName("QCborMap_ConstFind2")]
	public static extern QCborMap__ConstIterator QCborMap_ConstFind2(void* c_this, libqt_string key);
	[LinkName("QCborMap_ConstFind3")]
	public static extern QCborMap__ConstIterator QCborMap_ConstFind3(void* c_this, void* key);
	[LinkName("QCborMap_Find4")]
	public static extern QCborMap__ConstIterator QCborMap_Find4(void* c_this, int64 key);
	[LinkName("QCborMap_Find6")]
	public static extern QCborMap__ConstIterator QCborMap_Find6(void* c_this, libqt_string key);
	[LinkName("QCborMap_Find7")]
	public static extern QCborMap__ConstIterator QCborMap_Find7(void* c_this, void* key);
	[LinkName("QCborMap_Insert")]
	public static extern QCborMap__Iterator QCborMap_Insert(void* c_this, int64 key, void* value_);
	[LinkName("QCborMap_Insert3")]
	public static extern QCborMap__Iterator QCborMap_Insert3(void* c_this, libqt_string key, void* value_);
	[LinkName("QCborMap_Insert4")]
	public static extern QCborMap__Iterator QCborMap_Insert4(void* c_this, void* key, void* value_);
	[LinkName("QCborMap_InsertWithQCborMapvalueType")]
	public static extern QCborMap__Iterator QCborMap_InsertWithQCborMapvalueType(void* c_this, void* v);
	[LinkName("QCborMap_FromVariantMap")]
	public static extern void QCborMap_FromVariantMap(void* mapVal);
	[LinkName("QCborMap_FromVariantHash")]
	public static extern void QCborMap_FromVariantHash(void* hash);
	[LinkName("QCborMap_FromJsonObject")]
	public static extern void QCborMap_FromJsonObject(void* o);
	[LinkName("QCborMap_ToVariantMap")]
	public static extern void* QCborMap_ToVariantMap(void* c_this);
	[LinkName("QCborMap_ToVariantHash")]
	public static extern void* QCborMap_ToVariantHash(void* c_this);
	[LinkName("QCborMap_ToJsonObject")]
	public static extern void QCborMap_ToJsonObject(void* c_this);
	/// Delete this object from C++ memory
	[LinkName("QCborMap_Delete")]
	public static extern void QCborMap_Delete(void* self);
}
public class QCborMap__Iterator
{
	protected void* nativePtr;
	
	public this(QCborMap__Iterator* other)
	{
		this.nativePtr = CQt.QCborMap__Iterator_new(other);
	}
	
	public ~this()
	{
		CQt.QCborMap__Iterator_Delete(this.nativePtr);
	}
	
	public void OperatorAssign(QCborMap__Iterator* other)
	{
		CQt.QCborMap__Iterator_OperatorAssign(this.nativePtr, other);
	}
	
	public void* OperatorMultiply()
	{
		return CQt.QCborMap__Iterator_OperatorMultiply(this.nativePtr);
	}
	
	public void* OperatorSubscript(int32 j)
	{
		return CQt.QCborMap__Iterator_OperatorSubscript(this.nativePtr, j);
	}
	
	public void* OperatorMinusGreater()
	{
		return CQt.QCborMap__Iterator_OperatorMinusGreater(this.nativePtr);
	}
	
	public void* OperatorMinusGreater2()
	{
		return CQt.QCborMap__Iterator_OperatorMinusGreater2(this.nativePtr);
	}
	
	public void Key()
	{
		CQt.QCborMap__Iterator_Key(this.nativePtr);
	}
	
	public void Value()
	{
		CQt.QCborMap__Iterator_Value(this.nativePtr);
	}
	
	public bool OperatorEqual(QCborMap__Iterator* o)
	{
		return CQt.QCborMap__Iterator_OperatorEqual(this.nativePtr, o);
	}
	
	public bool OperatorNotEqual(QCborMap__Iterator* o)
	{
		return CQt.QCborMap__Iterator_OperatorNotEqual(this.nativePtr, o);
	}
	
	public bool OperatorLesser(QCborMap__Iterator* other)
	{
		return CQt.QCborMap__Iterator_OperatorLesser(this.nativePtr, other);
	}
	
	public bool OperatorLesserOrEqual(QCborMap__Iterator* other)
	{
		return CQt.QCborMap__Iterator_OperatorLesserOrEqual(this.nativePtr, other);
	}
	
	public bool OperatorGreater(QCborMap__Iterator* other)
	{
		return CQt.QCborMap__Iterator_OperatorGreater(this.nativePtr, other);
	}
	
	public bool OperatorGreaterOrEqual(QCborMap__Iterator* other)
	{
		return CQt.QCborMap__Iterator_OperatorGreaterOrEqual(this.nativePtr, other);
	}
	
	public bool OperatorEqualWithQCborMapConstIterator(QCborMap__ConstIterator* o)
	{
		return CQt.QCborMap__Iterator_OperatorEqualWithQCborMapConstIterator(this.nativePtr, o);
	}
	
	public bool OperatorNotEqualWithQCborMapConstIterator(QCborMap__ConstIterator* o)
	{
		return CQt.QCborMap__Iterator_OperatorNotEqualWithQCborMapConstIterator(this.nativePtr, o);
	}
	
	public bool OperatorLesserWithOther(QCborMap__ConstIterator* other)
	{
		return CQt.QCborMap__Iterator_OperatorLesserWithOther(this.nativePtr, other);
	}
	
	public bool OperatorLesserOrEqualWithOther(QCborMap__ConstIterator* other)
	{
		return CQt.QCborMap__Iterator_OperatorLesserOrEqualWithOther(this.nativePtr, other);
	}
	
	public bool OperatorGreaterWithOther(QCborMap__ConstIterator* other)
	{
		return CQt.QCborMap__Iterator_OperatorGreaterWithOther(this.nativePtr, other);
	}
	
	public bool OperatorGreaterOrEqualWithOther(QCborMap__ConstIterator* other)
	{
		return CQt.QCborMap__Iterator_OperatorGreaterOrEqualWithOther(this.nativePtr, other);
	}
	
	public QCborMap__Iterator* OperatorPlusPlus()
	{
		return CQt.QCborMap__Iterator_OperatorPlusPlus(this.nativePtr);
	}
	
	public QCborMap__Iterator OperatorPlusPlusWithInt(int32 param1)
	{
		return CQt.QCborMap__Iterator_OperatorPlusPlusWithInt(this.nativePtr, param1);
	}
	
	public QCborMap__Iterator* OperatorMinusMinus()
	{
		return CQt.QCborMap__Iterator_OperatorMinusMinus(this.nativePtr);
	}
	
	public QCborMap__Iterator OperatorMinusMinusWithInt(int32 param1)
	{
		return CQt.QCborMap__Iterator_OperatorMinusMinusWithInt(this.nativePtr, param1);
	}
	
	public QCborMap__Iterator* OperatorPlusAssign(int32 j)
	{
		return CQt.QCborMap__Iterator_OperatorPlusAssign(this.nativePtr, j);
	}
	
	public QCborMap__Iterator* OperatorMinusAssign(int32 j)
	{
		return CQt.QCborMap__Iterator_OperatorMinusAssign(this.nativePtr, j);
	}
	
	public QCborMap__Iterator OperatorPlus(int32 j)
	{
		return CQt.QCborMap__Iterator_OperatorPlus(this.nativePtr, j);
	}
	
	public QCborMap__Iterator OperatorMinus(int32 j)
	{
		return CQt.QCborMap__Iterator_OperatorMinus(this.nativePtr, j);
	}
	
	public int32 OperatorMinusWithQCborMapIterator(QCborMap__Iterator j)
	{
		return CQt.QCborMap__Iterator_OperatorMinusWithQCborMapIterator(this.nativePtr, j);
	}
	
}
